# vulkan-playground

./: CMakeLists.txt
dep/: CMakeLists.txt
shaders/: shader.frag  shader.vert
src/: camera.cpp  camera.hpp  debug.cpp  debug.hpp  device.cpp  device.hpp  events.cpp  events.hpp  main.cpp  swapchain.cpp  swapchain.hpp  ui.cpp  ui.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
